# pyghl

./: .gitmodules  AGENTS.md  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  setup.py
.github/workflows/: kb.yml  publish.yml  wheels.yml
csrc/: pyghl_module.c
examples/: eos_smoke.py  nn_c2p_generate_dataset.py  nn_c2p_test.py  nn_c2p_train.py  plot_eps_vs_temp.py
scripts/: check_kb.py  train_all.sh
src/pyghl/: __init__.py  _nn_common.py  _nn_dataset.py  _nn_hdf5.py  _nn_infer.py  _nn_train.py  cli.py  eos.py  nn.py
src/pyghl/nn_c2p/: __init__.py  append_eos_file.py  check_eos.py  common.py  eos_catalog.py  header_to_hdf5.py  list_installed_models.py  nn_c2p_analyze_cost_maps.py  nn_c2p_build_cost_map_labels.py  nn_c2p_evaluate_solver_policy.py  nn_c2p_generate_cost_maps.py  nn_c2p_generate_dataset.py  nn_c2p_test.py  nn_c2p_train.py  nn_c2p_train_baseline_selector.py  remove_eos_nn.py
src/pyghl/nn_c2p/models/: dd2.h5  dd2_1em1.h5  sly4.h5  sly4_1em1.h5
tests/: test_eos_catalog.py  test_kb_checks.py  test_nn_c2p_train_cli.py
wiki/: build-package-release-ci.md  catalog.md  change-impact.md  contradictions.md  generated-boundaries.md  index.md  public-api-map.md  source-map.md  test-map.md  workflows.md
wiki/bindings/: extension-surface-and-errors.md  index.md  tabulated-eos-lifetime-and-loader.md
wiki/cli/: command-workflows.md  eos-catalog-and-download.md  index.md
wiki/integration/: grhayl-submodule.md
wiki/lint/: CHECKS.md
wiki/nn/: dataset-and-generation.md  index.md  inference-and-export.md  model-eos-hdf5-lifecycle.md  training-and-checkpoints.md
