[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyghl"
version = "0.3.0"
description = "Python bindings for GRHayL (EOS-first preview)"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-2-Clause"
authors = [
  { name = "GRHayL contributors" }
]
dependencies = [
  "numpy",
  "torch",
  "h5py"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 3 - Alpha"
]

[project.scripts]
pyghl = "pyghl.cli:main"
pyghl-nn-train = "pyghl.nn_c2p.nn_c2p_train:main"
pyghl-append-eos = "pyghl.nn_c2p.append_eos_file:main"
pyghl-nn-header-to-hdf5 = "pyghl.nn_c2p.header_to_hdf5:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyghl = ["libghl*.so*", "libghl*.dylib", "nn_c2p/models/*.h5"]
